<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">鴻優視™智慧攝影機</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="application_name">ExoPlayer</string>


    <string name="video">Video</string>
    <string name="copyright">Copyright © 2009-2017 鴻亞國際有限公司</string>


    <string name="audio">Audio</string>


    <string name="text">Text</string>
    <string name="dialog_contact">
        \n
        電子郵箱:service@greata.com.tw \n
        官方網站:www.greata.com.tw \n
        客服熱線:886-2-2345-6969 \n
        公司地址:臺北市信義路五段111號  \n
        Facebook:greata_international \n
        Twitter:greata_international  </string>


    <string name="retry">Retry</string>


    <string name="selection_disabled">Disabled</string>


    <string name="selection_default">Default</string>


    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>


    <string name="enable_random_adaptation">Enable random adaptation</string>


    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>


    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>


    <string name="error_drm_unknown">An unknown DRM error occurred</string>


    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>


    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>


    <string name="error_querying_decoders">Unable to query device decoders</string>


    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>


    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>


    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>


    <string name="storage_permission_denied">Permission to access storage was denied</string>


    <string name="sample_list_load_error">One or more sample lists failed to load</string>


    <string name="ima_not_loaded">Playing sample without ads, as the IMA extension was not loaded</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">設定</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">移動目標偵測提醒 </string>
    <string name="pref_description_social_recommendations">當攝影機偵察到移動目標或儲存空間過低時 時，向手機通知發送提醒消息
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string-array name="list_help_q">
        <item>應用程式和攝影機的配對方法</item>
        <item>操作恢復出廠設定</item>
        <item>WiFi連接不上的原因</item>
        <item>鴻優視智慧攝像機在資料傳輸過程中有哪些安全保障？</item>
        <item>鴻優視在綁定過程中有哪些安防措施？  </item>
        <item>新聞節目中提到的弱口令的問題，請問鴻優視智慧攝像機在此方面有哪些保護措施？  </item>
        <item>新聞中曝出有家用智慧監視器被偷窺並出售IP地址的情况，鴻優視智慧攝像機系統存在這樣的漏洞風險麼？如何避免？  </item>
        <item>如何知道我們的監視器有沒有被人監視？如何査詢攝像機的登入記錄？  </item>
        <item>同一平臺內是否可以查看任意用戶監視器的視頻？  </item>
        <item>節目中技術員演示攻擊攝像機導致畫面停止是什麼原因？用戶應如何避免？  </item>
        <item>在這個演示中，演示者是如何知道監視器的帳號與密碼？鴻優視攝像機的用戶註冊資訊可否被任意查看？  </item>
        <item>資料存儲方面，使用本地存儲和雲存儲哪個更安全？ </item>
        <item>在APP和PC端，鴻優視都有哪些安全防護措施？  </item>
    </string-array>
    <string-array name="list_help_a">
        <item>先在手機上安裝並打開APP，然後開WIFI，等紅色指示燈閃爍了，點擊APP介面底部相機圖標，找到格式為“GREATA_xxxxxxx”設備WIFI就行咯，初始密碼為1234567890。
            如果親不幸發現了好多熱點，那就只能關機取下電池蓋，在電池倉裏找到序號，後七位就是相機的WIFI名字。然後重複以上步驟。
            相機和手機APP一定要先連接好，然後點擊連接介面右上角的設定圖標，找到“WIFI資訊設定”就可以修改WiFi密碼和名稱了。最後等待相機自行重啓完畢就可以</item>
        <item>相機連接手機APP後在設定選單裏找恢復出廠設定選項，或者長按相機電源鍵和WIFI按鍵，聽到一聲滴聲就可以了呢。
            建議正常情况下還是通過手機APP來操作最好</item>
        <item>1、手機APP是不是最新版，2、相機WIFI是不是沒有打開，WIFI藍色指示燈是否閃爍；3、手機APP是不是連接到別的相機WIFI；
            4、手機APP是不是輸入了錯誤的WIFI密碼；5、請確認在有效距離100米以內，相機和APP是不是已經連接了；
            6、看看附近是不是有很多無線熱點干擾；如果以上操作都無效，那麼只能試試萬能的恢復出廠設定了</item>
        <item>鴻優視智慧攝像機在傳輸過程中使用了高强度的私有動態加密系統，確保資料傳輸及存儲安全，用戶對攝像機的每一次訪問都受到加密保護。  </item>
        <item>鴻優視是首創使用二維碼綁定的設備，綁定過程中使用的是服務器隨機生成的權杖，無任何默認用戶名密碼的問題，所以央視質檢報告中所提及的“通過弱口令掃描的管道”攻擊攝像機對鴻優視設備是無效的。 </item>
        <item>鴻優視攝像機無任何預設的用戶名密碼，所以不存在弱口令問題。在帳號方面，鴻優視強制用戶使用强口令，同時還可以對攝像機設定4比特觀看密碼，保證了用戶帳號以及視頻數據的安全。  </item>
        <item>首先鴻優視攝像機無任何公開的網絡埠，僅能通過官方的APP和PC端進行觀看，利用其他如輸入IP地址等方法都無法流覽監視器內容。其次，新聞中所描述的情况主要是由於帳號洩露，而鴻優視強制用戶使用强口令密碼，並支持觀看密碼設定，極大的保證了用戶資訊安全。 </item>
        <item>鴻優視會推出帳號登入和監視器查看功能，記錄一目了然。 </item>
        <item>當然不可以，每個用戶只能看到自己所擁有的鴻優視攝像機的視頻內容，鴻優視沒有搭建支持個人發起直播等相關公共平臺。  </item>
        <item>節目中技術員演示的操作僅僅造成了畫面暫停，畫面也沒有被替換。出現暫停是因為攻擊者利用本地網絡對攝像機發起攻擊，導致攝像機網絡阻塞，無法正常傳輸視頻從而使畫面卡住，對用戶的正常觀看產生影響。囙此鴻優視並不存在被監控的風險。如果用戶採用TF卡存儲，會發現所有實时畫面都會被記錄在TF卡中。  </item>
        <item>演示中並無任何帳號和密碼洩露的行為，演示者只是通過攝像機本地網絡對攝像機發起攻擊，從而封锁攝像機的視頻傳輸，導致APP無法正常觀看攝像機內容，鴻優視攝像機本身不存在安全漏洞問題。攝像機的視頻傳輸被封锁，會導致用戶在APP上看到之前的靜止畫面，一段時間後，APP會提示用戶網絡已中斷。
            鴻優視系統中的注册資訊都是不可逆加密存儲的，任何人都查看不了。只要用戶按照要求設定了强密碼，並且不洩露該密碼，帳號就是安全的。  </item>
        <item>鴻優視雲存儲功能採用了高强度加密，更安全。首先，鴻優視雲存儲以阿裡雲為技術支援，有著充足的網絡防禦經驗；其次，鴻優視雲存儲是實时動態加密上傳數據的，且帳號之間的雲存儲是完全獨立的，設備帳號是一一對應關係，除了自己之外的任何人都無法查看雲存儲中的視頻內容。囙此相較於本地存儲，用鴻優視雲存儲更安全。  </item>
        <item>鴻優視智慧攝像機APP和鴻優視智慧攝像機PC端在訪問服務器進行資料交換和更新過程中，使用HTTPS官方證書嚴格加密。在用戶通過鴻優視用戶端訪問鴻優視智慧攝像機時，會使用動態密碼訪問加密技術和視頻傳輸加密技術，有效防止攝像機被盜用，加强了安全性。此外，在APP設定選項中，用戶還可以對每個鴻優視攝像機設定一個額外的、獨立的4比特數位觀看密碼，以達到更高級別的隱私保護。設定後在手機端及電腦端觀看視頻內容均需要輸入密碼，被分享的設備也需要知道密碼才能正常觀看。  </item>
    </string-array>
    <string name="title_activity_record">RecordActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="no_connection">未連接攝影機，不能訪問攝影機的存儲空間。</string>
    <string name="ssid_connect_text">攝影機連接WiFi的SSID</string>
    <string name="no_google">錯誤:沒有檢測到 Google Play 服務</string>
    <string name="greata_cloud">歡迎登陸Greata帳戶使用雲端存儲服務 </string>
    <string name="no_network">無法連結攝影機，請檢查網路和攝像機設定</string>
    <string name="network_tips">正在使用流動數據流量，可能導致電訊運營商收取額外費用。是否確定繼續觀看？</string>
    <string name="switch1_desc">開啟後，使用3G/4G流動數據觀看攝影機影像時不會出現提示框。</string>
    <string name="switch2_desc">開啟後，當攝影機偵察到移動目標時向手機發送警報。</string>
    <string name="switch3_desc">開啟後，當攝影機的儲存空間過低時向手機發送提醒。</string>
    <string name="switch4_desc">開啟後，當攝影機遇到斷電關機前向手機發送提醒。</string>
    <string name="unmatch_device">當前網路環境不適合匹配攝影機，請查看說明書並配寘無線路由器。</string>
    <string name="con_phone_net">請連接手機與WiFi網路</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">帳戶名</string>
    <string name="prompt_password">密碼 </string>
    <string name="action_sign_in">登入 </string>
    <string name="action_sign_in_short">登入 </string>
    <string name="error_invalid_email">帳戶名格式無效 </string>
    <string name="error_invalid_password">密碼長度過短</string>
    <string name="error_incorrect_password">密碼不正確</string>
    <string name="error_field_required">此項不能為空</string>
    <string name="video_enable_delete">自動清除視頻 </string>
    <string name="switch22_desc">開啟後，自動清除記憶體中設定時間以前的視頻存檔 。</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
